content has been added.

--- a/emo.html
+++ b/emo.html
@@ -53,42 +53,29 @@
         <h1 style="margin-top:90px;" class="text-center heading">EduLiasion Mathematics Olympiad (EMO)</h1>
         <div class="row  eso_conatiner">
             <div class="col-md-12">
-                <p class="text-center">EduLiasion Mathematics Olympiad is held in two level:</p>
+          
                 <br>
-                <p> <b>Level 1: </b> <br> The respective school is the venue for students appearing
-                    through schools. For those students who are registered as an individual will have to take exam from
-                    home or from institute having computer with good internet connectivity.
+                <p> <b>Details Regarding Examination : </b> <br> The respective school is the venue for students appearing
+                    through schools. No Individual registration is allowed for Examination.
                     <br>
-                    The Level 1 exam is an objective-type test having duration of 60 minutes comprising of 35
-                    objective-type questions for classes 1 to 4 and 50 objective-type questions for classes 5 to 10.
+                    The exam is an objective-type test having duration of 60 minutes comprising of 35
+                    objective-type questions for classes 1 & 2 and 50 objective-type questions for classes 3 to 10.
                 </p>
-                <h4> <b>The exam cosnist of two sections </b> </h4>
+                <h4> <b>The exam consist of three sections </b> </h4>
                 <div style="margin:0px 10px">
                     <ul>
-                        <li> <b>Section-1: </b>Practical Mathematics
+                        <li> <b>Section-1: </b>Logical reasoning.
 
                         </li>
                         <li>
-                            <b> Section-2: </b>Achievers Section
+                            <b> Section-2: </b>General Science.
+                        </li>
+                        <li>
+                            <b> Section-3: </b>Achiever's section
                         </li>
                     </ul>
                 </div>
-                <p>
-                    <b> Level 2:</b> <br> The Level 2 is organised for students of classes 3 to 10 only. The qualifiers
-                    to second
-                    round would include the following:
-                    <br>
-                <ul>
-                    <li>Top 5% of candidates in a particular class that have given the Level 1 exam. Please note that,
-                        to
-                        calculate the top 5% students, due weightage will be given to marks scored in different
-                        sections.
-                        Also, each section is accorded with a separate weightage.</li>
-                    <li>Top 25 rank holders in a particular class and in a particular zone.</li>
-                </ul>
-                <br>
-
-                </p>
+              
 
             </div>
         </div>
