navbar name changed

--- a/eso.html
+++ b/eso.html
@@ -40,10 +40,10 @@
         <nav class="navbar">
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="index.html">About us</a></li>
                 <!-- <li><a href="#skills">Skills</a></li> -->
-                <li><a href="index.html">Olympiads</a></li>
-                <li><a href="index.html">Achievements</a></li>
+                <li><a href="index.html">our Olympiads</a></li>
+                <li><a href="index.html">Awards & recognition</a></li>
                 <li><a href="index.html">Process</a></li>
                 <!-- <li><a href="#contact">Contact</a></li> -->
             </ul>
