--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <nav class="navbar">
       <ul>
         <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">About us</a></li>
         <!-- <li><a href="#skills">Skills</a></li> -->
-        <li><a href="#olympiads">Olympiads</a></li>
-        <li><a href="#achievements">Achievements</a></li>
+        <li><a href="#olympiads">our Olympiads</a></li>
+        <li><a href="#achievements">Awards & recognition</a></li>
         <li><a href="#process">Process</a></li>
         <!-- <li><a href="#contact">Contact</a></li> -->
       </ul>
@@ -381,16 +381,16 @@
           <div class="desc">
 <p style="font-size: 14px;">EduLiasion Mathematics Olympiad <br>
 
-    <li style="font-size: 14px;">Mock: 19/02/0202</li>
-    <li style="font-size: 14px;">Final: 216544</li>
+    <li style="font-size: 14px;">Mock Exam: 01/01/2022</li>
+    <li style="font-size: 14px;">Final Exam: 09/01/2022</li>
   
 
 </p>
 <p style="font-size: 14px;">
   EduLiasion Science Olympiad
  
-    <li style="font-size:14px">Mock: 19/02/0202</li>
-    <li style="font-size: 14px;">Final: 216544</li>
+    <li style="font-size:14px">Mock Exam : 02/01/2022</li>
+    <li style="font-size: 14px;">Final Exam : 16/01/2022</li>
 
 </p>
 
@@ -449,10 +449,10 @@
       <div class="box">
         <h3>quick links</h3>
         <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
-        <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
+        <a href="#about"><i class="fas fa-chevron-circle-right"></i> about us</a>
 
-        <a href="#olympiads"><i class="fas fa-chevron-circle-right"></i> Olympiads</a>
-        <a href="#achievements"><i class="fas fa-chevron-circle-right"></i> Achievements</a>
+        <a href="#olympiads"><i class="fas fa-chevron-circle-right"></i> our Olympiads</a>
+        <a href="#achievements"><i class="fas fa-chevron-circle-right"></i> Awards and recognition</a>
 
         <a href="#process"><i class="fas fa-chevron-circle-right"></i> Process</a>
       </div>
